sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/Competitor_Market_Analysis__c.object-meta.xml
<CustomObject>
    <label>Competitor Market Analysis</label>
    <nameField>
        <displayFormat>CMA-{0000}</displayFormat>
        <label>Competitor Market Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Market Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>