sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Market Analysis</relationshipLabel>
    <relationshipName>Competitor_Market_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>