sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>