sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>