sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Competitor_Stock__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Stock__c</fullName>
    <label>Competitor Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>