sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Customer_Demand_Trend__c.field-meta.xml
<CustomField>
    <fullName>Customer_Demand_Trend__c</fullName>
    <label>Customer Demand Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increasing</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Decreasing - Ours</fullName>
            </value>
            <value>
                <fullName>Increasing - Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>