sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Dealer_Preference__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Preference__c</fullName>
    <label>Dealer Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly</fullName>
            </value>
            <value>
                <fullName>Slightly Prefer Ours</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Slightly</fullName>
            </value>
            <value>
                <fullName>Strongly Prefer Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>