sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Display_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Display_Visibility__c</fullName>
    <label>Display Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Not Displayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>