sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Journey_Plan_Item__c.field-meta.xml
<CustomField>
    <fullName>Journey_Plan_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Plan Item</label>
    <referenceTo>Journey_Plan_Item__c</referenceTo>
    <relationshipLabel>Competitor Market Analysis</relationshipLabel>
    <relationshipName>Competitor_Market_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>