sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Our_Product__c.field-meta.xml
<CustomField>
    <fullName>Our_Product__c</fullName>
    <label>Our Product</label>
    <length>25</length>
    <type>Text</type>
</CustomField>