sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Price_Difference_INR__c.field-meta.xml
<CustomField>
    <fullName>Price_Difference_INR__c</fullName>
    <formula>Our_Price__c -  Competitor_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Difference (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>