sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Price_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Price_Sensitivity__c</fullName>
    <label>Price Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>