sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Promo_Scheme_Active__c.field-meta.xml
<CustomField>
    <fullName>Promo_Scheme_Active__c</fullName>
    <label>Promo / Scheme Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No / Yes - Ours</fullName>
            </value>
            <value>
                <fullName>Yes - Competitor</fullName>
            </value>
            <value>
                <fullName>Yes - Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>