sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Shelf_Share_Percent__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Share_Percent__c</fullName>
    <label>Shelf Share Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>