sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Stock_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Stock_Ratio__c</fullName>
    <formula>Our_Stock__c / (Our_Stock__c + Competitor_Stock__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>