sfa-dms/force-app/main/default/objects/Competitor_Market_Analysis__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Competitor Market Analysis</relationshipLabel>
    <relationshipName>Competitor_Market_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>